Bug 991969 - Event not fired when description changes, r=jwei

--HG--
rename : accessible/tests/mochitest/events/test_name.xul => accessible/tests/mochitest/events/test_namechange.xul